--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">工业时代2、环境科技、热力膨胀5[全家桶]、Cyclic、核电工艺、通用机械、应用能源2、星辉魔法、龙之研究、末影接口及气体导管拓展、更多存储单元、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级太阳能、超级太阳能、自定义NPC、更多箱子、重力装甲、家具、PSI、潘马斯农场、METS、千年村庄、RF工具箱</p>
+                  <p class="h5">工业时代2、环境科技、热力膨胀5[全家桶]、Cyclic、核电工艺、通用机械、应用能源2、星辉魔法、龙之研究、末影接口及气体导管拓展、更多存储单元、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级太阳能、超级太阳能、自定义NPC、更多箱子、重力装甲、家具、PSI、潘马斯农场、METS、RF工具箱</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
