--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">工业时代2、环境科技、热力膨胀5[全家桶]、Cyclic、核电工艺、通用机械、应用能源2、星辉魔法、龙之研究、末影接口及气体导管拓展、更多存储单元、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级太阳能、超级太阳能、自定义NPC、更多箱子、重力装甲、家具、PSI、潘马斯农场、METS、RF工具箱</p>
+                  <p class="h5">工业时代2、热力膨胀5[全家桶]、核电工艺、通用机械、应用能源2、龙之研究及其附属、懒人AE、懒人厨房、量子存储、末影接口及气体导管拓展、更多存储单元、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级太阳能、超级太阳能、自定义NPC、更多箱子、重力装甲、家具、潘马斯农场、METS、RF工具箱</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
@@ -144,7 +144,7 @@
                 <i class="fab fa-connectdevelop"></i>
               </div>
               <h4 class="h5">流畅的游戏体验</h4>
-              <p>服务器使用独立机i9-9900K（超频5.0GHz），宁波三线BGP网络，及全球加速线路，只为给您带来流畅稳定的游戏体验</p>
+              <p>服务器使用独立机AMD R9 5900X超频（性能高于i9-10900K），三线高防网络，及全球加速线路，只为给您带来流畅稳定的游戏体验</p>
             </div>
 
             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -274,6 +274,7 @@
               </header>
               <p class="h5">即使我们用了极强的硬件来运行服务器，但我们依然十分关注软件上的优化。</p>
               <p class="h5">纸箱使用了BungeeCord技术，完美解决Minecraft 1.12.2的卡顿问题。</p>
+              <p class="h5">“服务器跟吃了德芙一样丝滑”</p>
             </div>
             <!-- End Article Content -->
           </div>
@@ -284,7 +285,7 @@
         <div class="container">
           <header class="text-center w-md-50 mx-auto mb-8">
             <h2 class="h1">最后的最后</h2>
-            <p class="h5">我们也许没有其他服务器那样精致的宣传帖，但是我们拥有精致的服务器</p>
+            <p class="h5">我们也许没有其他服务器那样精致的宣传帖，但是我们拥有比他们更加优秀的服务器</p>
             <p class="h5">纸箱拒绝快餐，半年更换一次周目</p>
             <p class="h5">我们拥有经验丰富的管理团队</p>
             <p class="h5">也许你还在犹豫是否要加入纸箱，不要犹豫了，进来坐坐吧</p>
