--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <i class="fab fa-connectdevelop"></i>
               </div>
               <h4 class="h5">流畅的游戏体验</h4>
-              <p>服务器使用独立机AMD R9 5900X超频（性能高于i9-10900K），三线高防网络，及全球加速线路，只为给您带来流畅稳定的游戏体验</p>
+              <p>服务器使用独立机AMD R9 5900X超频（性能高于i9-10900K），BGP高防网络，及全球加速线路，只为给您带来流畅稳定的游戏体验</p>
             </div>
 
             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -281,6 +281,29 @@
         </div>
       </section>
       <!-- End Our Product -->
+            <!-- Our Product -->
+            <section class="u-content-space">
+              <div class="container">
+                <div class="row">
+                  <!-- Article Content -->
+                  <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
+                    <header class="mb-5">
+                      <h2 class="h1">纸箱，一个喧闹繁华的服务器</h2>
+                    </header>
+                    <p class="h5">纸箱不同于大部分服务器那样冷清，我们通过高质量的游戏体验，引来了大量的玩家。</p>
+                    <p class="h5">一般情况下，纸箱的在线人数稳定在20人以上，且我们承诺这其中不包含任何假人。</p>
+                  </div>
+                  <!-- End Article Content -->
+                  <!-- Article Image -->
+                  <div class="col-lg-6 align-self-center">
+                    <img class="img-fluid rounded" src="assets/img/player.png" alt="mod">
+                  </div>
+                  <!-- End Article Image -->
+
+                </div>
+              </div>
+            </section>
+            <!-- End Our Product -->
       <section class="u-content-space">
         <div class="container">
           <header class="text-center w-md-50 mx-auto mb-8">
@@ -345,7 +368,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-20 text-center text-md-left mb-3 mb-md-0">
-            <small class="text-white">&copy; 2020 <a class="text-white" href="https://pb.jiajiaxd.top">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
+            <small class="text-white">&copy; 2021 <a class="text-white" href="https://pb.jiajiaxd.top">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
             
           </div>
           
