--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">工业时代2、热力膨胀5[全家桶]、核电工艺、通用机械、应用能源2、龙之研究及其附属、懒人AE、懒人厨房、量子存储、末影接口及气体导管拓展、更多存储单元、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级太阳能、超级太阳能、自定义NPC、更多箱子、重力装甲、家具、潘马斯农场、METS、RF工具箱</p>
+                  <p class="h5">工业时代2、热力膨胀5[全家桶]、EU-RF通用转换、模块化机械、核电工艺、通用机械、应用能源2(AE)以及精致存储(RS)、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级/超级太阳能、自定义NPC、更多箱子、重力装甲、家具、潘马斯农场、METS、RF工具箱</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
@@ -177,10 +177,10 @@
             <!-- Article Content -->
             <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
               <header class="mb-5">
-                <h2 class="h1">提供均衡版和光影版</h2>
+                <h2 class="h1">提供标准版和完整版</h2>
               </header>
-              <p class="h5">均衡版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有100+MOD的纸箱</p>
-              <p class="h5">如果你的电脑配置较高，也可以体验光影版【美图鉴赏内所有图片均使用光影版截取】</p>
+              <p class="h5">标准版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有100+MOD的纸箱</p>
+              <p class="h5">如果你的电脑配置较高，也可以体验完整版【美图鉴赏内所有图片均使用光影版截取】</p>
             </div>
             <!-- End Article Content -->
           </div>
@@ -198,7 +198,7 @@
                 <h2 class="h1">丰富的新手礼包</h2>
               </header>
               <p class="h5">科技前期十分艰难，就让新手礼包让你顺利度过前期吧~</p>
-              <p class="h5">赠送了AE的安全终端及身份卡，让熊孩子无计可施</p>
+              <p class="h5">赠送了AE以及RS的安全终端及身份卡，让熊孩子无计可施</p>
             </div>
             <!-- End Article Content -->
             <!-- Article Image -->
@@ -233,30 +233,6 @@
         </div>
       </section>
       <!-- End Our Product -->
-
-      <!-- Our Product -->
-      <section class="u-content-space">
-        <div class="container">
-          <div class="row">
-            <!-- Article Content -->
-            <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
-              <header class="mb-5">
-                <h2 class="h1">全球市场</h2>
-                <p class="h5">更好的交易方式</p>
-              </header>
-              <p class="h5">全服玩家交易的地方！ 可以自由出售你想卖的物品，同时你也可以在全球市场购买物品。比起传统的开店，这将更加方便、迅速。</p>
-            </div>
-            <!-- End Article Content -->
-            <!-- Article Image -->
-            <div class="col-lg-6 align-self-center">
-              <img class="img-fluid rounded" src="assets/img/gs.png" alt="mod">
-            </div>
-            <!-- End Article Image -->
-          </div>
-        </div>
-      </section>
-      <!-- End Our Product -->
-
 
       <!-- Our Product -->
       <section class="u-content-space">
