--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">工业时代2、热力膨胀5[全家桶]、EU-RF通用转换、模块化机械、核电工艺、通用机械、应用能源2(AE)以及精致存储(RS)、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级/超级太阳能、自定义NPC、更多箱子、重力装甲、家具、潘马斯农场、METS、RF工具箱</p>
+                  <p class="h5">模块化机械、工业时代2、FTB任务、热力膨胀5[全家桶]、EU-RF通用转换、核电工艺、通用机械、应用能源2(AE)以及精致存储(RS)、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级/超级太阳能、更多箱子、重力装甲、家具、潘马斯农场、RF工具箱</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
@@ -145,7 +145,7 @@
                 <i class="fab fa-connectdevelop"></i>
               </div>
               <h4 class="h5">流畅的游戏体验</h4>
-              <p>服务器使用独立机AMD R9 5900X超频（性能高于i9-10900K），BGP高防网络，及全球加速线路，只为给您带来流畅稳定的游戏体验</p>
+              <p>服务器使用独立机AMD R9 5900X超频4.7Ghz（性能高于i9-10900K），128G 3000Mhz内存，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
             </div>
 
             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -177,10 +177,10 @@
             <!-- Article Content -->
             <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
               <header class="mb-5">
-                <h2 class="h1">提供标准版和完整版</h2>
+                <h2 class="h1">提供均衡版和光影版</h2>
               </header>
-              <p class="h5">标准版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有100+MOD的纸箱</p>
-              <p class="h5">如果你的电脑配置较高，也可以体验完整版【美图鉴赏内所有图片均使用光影版截取】</p>
+              <p class="h5">均衡版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有120+MOD的纸箱</p>
+              <p class="h5">如果你的电脑配置较高，也可以体验光影版【美图鉴赏内所有图片均使用光影版截取】</p>
             </div>
             <!-- End Article Content -->
           </div>
@@ -226,7 +226,7 @@
                 <h2 class="h1">人性化的菜单设计</h2>
               </header>
               <p class="h5">WASD是Minecraft中最常用的键，我们将菜单指令设置为/a，传送菜单设置为/d，打开菜单，仅需1秒。一触，即发。</p>
-              <p class="h5">一触，即发。</p>
+              <p class="h5">我们还设置了可以打开菜单的快捷键，只要按下R键就可以尽览所有内容</p>
             </div>
             <!-- End Article Content -->
           </div>
@@ -268,7 +268,7 @@
                       <h2 class="h1">纸箱，一个喧闹繁华的服务器</h2>
                     </header>
                     <p class="h5">纸箱不同于大部分服务器那样冷清，我们通过高质量的游戏体验，引来了大量的玩家。</p>
-                    <p class="h5">一般情况下，纸箱的在线人数稳定在20人以上，且我们承诺这其中不包含任何假人。</p>
+                    <p class="h5">一般情况下，纸箱的在线人数稳定在25人以上，且我们承诺这其中不包含任何假人。</p>
                   </div>
                   <!-- End Article Content -->
                   <!-- Article Image -->
