--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="no-js">
   <!-- Head -->
   <head>
-    <title>纸箱工艺丨科技魔法</title>
+    <title>我的世界服务器_纸箱工艺_科技魔法MOD服</title>
+    <meta name="description" content="我的世界Minecraft科技魔法MOD生存服务器_1.12.2_在线人数稳定25人以上_在MCBBS人气爆棚_QQ群：279377943_2018-2021">
     
 
     <!-- Meta -->
@@ -10,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="keywords" content="Bootstrap Theme, Freebies, UI Kit, MIT license">
-    <meta name="description" content="Stream - UI Kit">
     <meta name="author" content="htmlstream.com">
 
     <!-- Favicon -->
@@ -78,7 +78,7 @@
                 <a class="btn btn-primary" href="https://jq.qq.com/?_wv=1027&k=2N0fop3D">
                   加入纸箱官方QQ群 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
                 </a>
-                <a class="btn btn-primary" href="https://pan.baidu.com/s/1LcXFf7KX4cBkEhwQ-FvWMQ">
+                <a class="btn btn-primary" href="https://pan.baidu.com/s/1w4sTPGjdT5NTYOBpSQfP7g">
                   下载纸箱客户端[提取码1234] <i class="fas fa-arrow-alt-circle-right ml-2"></i>
                 </a>
               </div>
