--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a class="btn btn-primary" href="https://jq.qq.com/?_wv=1027&k=2N0fop3D">
                   加入纸箱官方QQ群 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
                 </a>
-                <a class="btn btn-primary" href="https://pan.baidu.com/s/1LcXFf7KX4cBkEhwQ-FvWMQ">
+                <a class="btn btn-primary" href="https://pan.baidu.com/s/11r_PPldN6aB5xbr51Y9fOw">
                   下载纸箱客户端[提取码1234] <i class="fas fa-arrow-alt-circle-right ml-2"></i>
                 </a>
               </div>
@@ -104,7 +104,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">模块化机械、工业时代2、FTB任务、热力膨胀5[全家桶]、EU-RF通用转换、核电工艺、通用机械、应用能源2(AE)以及精致存储(RS)、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、开放式电脑、无尽贪婪、樱、高级/超级太阳能、更多箱子、重力装甲、家具、潘马斯农场、RF工具箱</p>
+                  <p class="h5">模块化机械、工业时代2、热力膨胀5、通用能源、核电工艺、通用机械、应用能源2、余烬复刻版、Xnet、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、无尽贪婪、樱、超级太阳能、更多箱子、重力装甲、家具、潘马斯农场、RF工具箱</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
@@ -145,7 +145,7 @@
                 <i class="fab fa-connectdevelop"></i>
               </div>
               <h4 class="h5">流畅的游戏体验</h4>
-              <p>服务器使用独立机AMD R9 5900X超频4.7Ghz（性能高于i9-10900K），128G 3000Mhz内存，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
+              <p>服务器使用高频服务器集群 9900k 64G内存 + AMD R9 5900X超频4.7Ghz（性能高于i9-10900K），128G内存，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
             </div>
 
             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -198,7 +198,7 @@
                 <h2 class="h1">丰富的新手礼包</h2>
               </header>
               <p class="h5">科技前期十分艰难，就让新手礼包让你顺利度过前期吧~</p>
-              <p class="h5">赠送了AE以及RS的安全终端及身份卡，让熊孩子无计可施</p>
+              <p class="h5">赠送了AE的安全终端及身份卡，让熊孩子无计可施</p>
             </div>
             <!-- End Article Content -->
             <!-- Article Image -->
@@ -250,7 +250,9 @@
 
               </header>
               <p class="h5">即使我们用了极强的硬件来运行服务器，但我们依然十分关注软件上的优化。</p>
-              <p class="h5">纸箱使用了BungeeCord技术，完美解决Minecraft 1.12.2的卡顿问题。</p>
+              <p class="h5">纸箱使用了Waterfall群组服，完美解决Minecraft 1.12.2的卡顿问题。</p>
+              <p class="h5">六大生存区，均衡分配玩家以及性能占用（玩家数据同步）</p>
+              <p class="h5">并且服务器添加了性能分析Mod，玩家可以自己分析基地内绝大部分方块的流畅度</p>
               <p class="h5">“服务器跟吃了德芙一样丝滑”</p>
             </div>
             <!-- End Article Content -->
@@ -286,7 +288,7 @@
           <header class="text-center w-md-50 mx-auto mb-8">
             <h2 class="h1">最后的最后</h2>
             <p class="h5">我们也许没有其他服务器那样精致的宣传帖，但是我们拥有比他们更加优秀的服务器</p>
-            <p class="h5">纸箱拒绝快餐，半年更换一次周目</p>
+            <p class="h5">纸箱拒绝快餐，没有频繁的周目替换计划</p>
             <p class="h5">我们拥有经验丰富的管理团队</p>
             <p class="h5">也许你还在犹豫是否要加入纸箱，不要犹豫了，进来坐坐吧</p>
             <p class="h5">OwO</p>
@@ -345,7 +347,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-20 text-center text-md-left mb-3 mb-md-0">
-            <small class="text-white">&copy; 2021 <a class="text-white" href="https://pb.jiajiaxd.top">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
+            <small class="text-white">&copy; 2021 <a class="text-white" href="https://paperbox.cn">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
             
           </div>
           
