--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">模块化机械、工业时代2、热力膨胀5、通用能源、核电工艺、通用机械、应用能源2、余烬复刻版、Xnet、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、无尽贪婪、樱、超级太阳能、更多箱子、重力装甲、家具、潘马斯农场、RF工具箱</p>
+                  <p class="h5">模块化机械、工业时代2、集成动力、热力膨胀5、通用能源、核电工艺、通用机械、应用能源2、余烬复刻版、工匠工作台、Xnet、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、无尽贪婪、樱、超级太阳能、更多箱子、重力装甲、家具、潘马斯农场、RF工具箱</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
@@ -145,7 +145,7 @@
                 <i class="fab fa-connectdevelop"></i>
               </div>
               <h4 class="h5">流畅的游戏体验</h4>
-              <p>服务器使用高频服务器集群 9900k 64G内存 + AMD R9 5900X超频4.7Ghz（性能高于i9-10900K），128G内存，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
+              <p>纸箱使用高频服务器AMD R9 5900X超频4.7Ghz（性能高于i9-10900K），128G内存，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
             </div>
 
             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -179,7 +179,7 @@
               <header class="mb-5">
                 <h2 class="h1">提供均衡版和光影版</h2>
               </header>
-              <p class="h5">均衡版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有120+MOD的纸箱</p>
+              <p class="h5">均衡版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有150+MOD的纸箱</p>
               <p class="h5">如果你的电脑配置较高，也可以体验光影版【美图鉴赏内所有图片均使用光影版截取】</p>
             </div>
             <!-- End Article Content -->
@@ -187,6 +187,31 @@
         </div>
       </section>
       <!-- End Our Product -->
+
+      <!-- End Mod Product -->
+            <!-- Our Product -->
+            <section class="u-content-space">
+              <div class="container">
+                <div class="row">
+                  <!-- Article Content -->
+                  <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
+                    <header class="mb-5">
+                      <h2 class="h1">纸箱原创特色机械</h2>
+                    </header>
+                    <p class="h5">由纸箱管理组编写的原创模块化机械</p>
+                    <p class="h5">拥有自己完整的科技线 且无任何氪金内容</p>
+                  </div>
+                  <!-- End Article Content -->
+                  <!-- Article Image -->
+                  <div class="col-lg-6 align-self-center">
+                    <img class="img-fluid rounded" src="assets/img/machine.png" alt="mod">
+                  </div>
+                  <!-- End Article Image -->
+
+                </div>
+              </div>
+            </section>
+            <!-- End Mod Product -->
 
       <!-- Our Product -->
       <section class="u-content-space">
@@ -251,7 +276,7 @@
               </header>
               <p class="h5">即使我们用了极强的硬件来运行服务器，但我们依然十分关注软件上的优化。</p>
               <p class="h5">纸箱使用了Waterfall群组服，完美解决Minecraft 1.12.2的卡顿问题。</p>
-              <p class="h5">六大生存区，均衡分配玩家以及性能占用（玩家数据同步）</p>
+              <p class="h5">九大生存区，均衡分配玩家以及性能占用（玩家数据同步）</p>
               <p class="h5">并且服务器添加了性能分析Mod，玩家可以自己分析基地内绝大部分方块的流畅度</p>
               <p class="h5">“服务器跟吃了德芙一样丝滑”</p>
             </div>
