--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：</p>
-                  <p class="h5">模块化机械、工业时代2、集成动力、热力膨胀5、通用能源、核电工艺、通用机械、应用能源2、余烬复刻版、工匠工作台、Xnet、龙之研究及其附属、懒人厨房、建筑之仗、末影接口、匠魂及其大量附属、植物魔法及其附属、无尽贪婪、樱、超级太阳能、更多箱子、重力装甲、家具、潘马斯农场、RF工具箱</p>
+                  <p class="h5">应用能源2(附属:AE2 Stuff,封包合成,流体合成,懒人AE2,)模块化机械(附属:咕咕工具,模块化机械控制器)、工业时代2(附属:更多电力装置,高级太阳能,超级太阳能,重力装甲)、热力膨胀5(附属:红石兵工厂及其扩展)、龙之研究(附属:龙研扩展)、末影接口(附属:导管扩展、气体导管、无尽接口)、匠魂(附属:匠魂进化,匠魂扩充,匠魂护甲,匠魂工具等级,匠魂合金附加)、植物魔法(附属:额外植物学,植物魔法需要它！)、懒人厨房、通量网络、通用能源、核电工艺-重制版、通用机械及其发电、血魔法、凿子、工匠工作台、建筑之仗、无尽贪婪、樱、更多箱子、家具、潘马斯农场、傻瓜式农贸市场</p>
                   <p class="h5">MOD持续更新....</p>
                 </div>
                 <!-- End Article Content -->
@@ -145,7 +145,7 @@
                 <i class="fab fa-connectdevelop"></i>
               </div>
               <h4 class="h5">流畅的游戏体验</h4>
-              <p>纸箱使用高频服务器AMD R9 5900X超频4.7Ghz（性能高于i9-10900K），128G内存，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
+              <p>纸箱使用服务器独立机AMD R9 5900X超频4.7Ghz，BGP高防网络，及全球加速线路，保证24小时不间断运行，只为给您带来流畅稳定的游戏体验</p>
             </div>
 
             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -179,10 +179,13 @@
               <header class="mb-5">
                 <h2 class="h1">提供均衡版和光影版</h2>
               </header>
-              <p class="h5">均衡版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有150+MOD的纸箱</p>
+              <p class="h5">均衡版客户端拥有极致的优化，即使你的电脑十分低配，也可以流畅体验装有170+MOD的纸箱</p>
               <p class="h5">如果你的电脑配置较高，也可以体验光影版【美图鉴赏内所有图片均使用光影版截取】</p>
             </div>
             <!-- End Article Content -->
+            <div class="col-lg-6 align-self-center">
+              <img class="img-fluid rounded" src="assets/img/mod.png" alt="mod">
+            </div>
           </div>
         </div>
       </section>
@@ -196,10 +199,11 @@
                   <!-- Article Content -->
                   <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
                     <header class="mb-5">
-                      <h2 class="h1">纸箱原创特色机械</h2>
+                      <h2 class="h1">不在拘束于单方块机械。</h2>
                     </header>
-                    <p class="h5">由纸箱管理组编写的原创模块化机械</p>
-                    <p class="h5">拥有自己完整的科技线 且无任何氪金内容</p>
+                    <p class="h5">由纸箱社区玩家编写的原创多方块机械</p>
+                    <p class="h5">拥有自己完整的科技线，且无任何氪金内容</p>
+                    <p class="h5">社区内不定期举行模块化活动，你也可以成为创造者</p>
                   </div>
                   <!-- End Article Content -->
                   <!-- Article Image -->
@@ -251,7 +255,7 @@
                 <h2 class="h1">人性化的菜单设计</h2>
               </header>
               <p class="h5">WASD是Minecraft中最常用的键，我们将菜单指令设置为/a，传送菜单设置为/d，打开菜单，仅需1秒。一触，即发。</p>
-              <p class="h5">我们还设置了可以打开菜单的快捷键，只要按下R键就可以尽览所有内容</p>
+              <p class="h5">我们还设置了可以打开菜单的快捷键，只要按下R键即可尽览所有内容</p>
             </div>
             <!-- End Article Content -->
           </div>
@@ -271,12 +275,12 @@
             <!-- Article Content -->
             <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
               <header class="mb-5">
-                <h2 class="h1">纸箱，也许是你玩过最流畅的服务器</h2>
+                <h2 class="h1">纸箱，也许是你玩过最全面、流畅的服务器</h2>
 
               </header>
               <p class="h5">即使我们用了极强的硬件来运行服务器，但我们依然十分关注软件上的优化。</p>
-              <p class="h5">纸箱使用了Waterfall群组服，完美解决Minecraft 1.12.2的卡顿问题。</p>
-              <p class="h5">九大生存区，均衡分配玩家以及性能占用（玩家数据同步）</p>
+              <p class="h5">纸箱使用了Waterfall群组服，完美解决游戏后期的绝大部分卡顿问题。</p>
+              <p class="h5">9大生存区，空岛，大陆，地皮应有尽有（背包数据同步）</p>
               <p class="h5">并且服务器添加了性能分析Mod，玩家可以自己分析基地内绝大部分方块的流畅度</p>
               <p class="h5">“服务器跟吃了德芙一样丝滑”</p>
             </div>
@@ -373,9 +377,9 @@
         <div class="row">
           <div class="col-md-20 text-center text-md-left mb-3 mb-md-0">
             <small class="text-white">&copy; 2021 <a class="text-white" href="https://paperbox.cn">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
-            
+
           </div>
-          
+
             </ul>
           </div>
         </div>
