修改错别字

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   <!-- Article Content -->
                   <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
                     <header class="mb-5">
-                      <h2 class="h1">不在拘束于单方块机械</h2>
+                      <h2 class="h1">不再拘束于单方块机械</h2>
                     </header>
                     <p class="h5">由纸箱社区玩家编写的原创多方块机械</p>
                     <p class="h5">拥有自己完整的科技线，且无任何氪金内容</p>
