--- a/index.html
+++ b/index.html
@@ -98,16 +98,15 @@
             <div class="container">
               <div class="row">
                 <!-- Article Content -->
-                <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
+
                   <header class="mb-5">
                     <h2 class="h1">纸箱中添加的模组</h2>
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
-                  <p class="h5">详细MOD表：</p>
-                  <p class="h5">应用能源2（附属:AE2 Stuff,封包合成,流体合成,懒人AE2）、模块化机械（附属:咕咕工具,模块化机械控制器）、工业时代2（附属:更多电力装置,高级太阳能,超级太阳能,重力装甲）、热力膨胀5（附属:红石兵工厂及其扩展）、龙之研究（附属:龙研扩展）、末影接口（附属:导管扩展、气体导管、无尽接口）、匠魂（附属:匠魂进化,匠魂扩充,匠魂护甲,匠魂工具等级,匠魂合金附加）、植物魔法（附属:额外植物学,植物魔法需要它！）、懒人厨房、通量网络、通用能源、核电工艺-重制版、通用机械及其发电、血魔法、凿子、工匠工作台、建筑之仗、无尽贪婪、樱、更多箱子、家具、潘马斯农场、傻瓜式农贸市场</p>
+                  <p class="h5">详细MOD表：应用能源2（附属:AE2 Stuff,封包合成,流体合成,懒人AE2）、模块化机械（附属:咕咕工具,模块化机械控制器）、工业时代2（附属:更多电力装置,高级太阳能,超级太阳能,重力装甲）、热力膨胀5（附属:红石兵工厂及其扩展）、龙之研究（附属:龙研扩展）、末影接口（附属:导管扩展、气体导管、无尽接口）、匠魂（附属:匠魂进化,匠魂扩充,匠魂护甲,匠魂工具等级,匠魂合金附加）、植物魔法（附属:额外植物学,植物魔法需要它！）、懒人厨房、通量网络、通用能源、核电工艺-重制版、通用机械及其发电、血魔法、凿子、工匠工作台、建筑之仗、无尽贪婪、樱、更多箱子、家具、潘马斯农场、傻瓜式农贸市场</p>
                   <p class="h5">并且客户端已经预装了绝大部分玩家的常用辅助Mod，省去了玩家花费时间自己安装辅助Mod的时间</p>
                   <p class="h5">MOD持续更新....</p>
-                </div>
+
                 <!-- End Article Content -->
 
                 <!-- Article Image
@@ -198,6 +197,12 @@
             <section class="u-content-space">
               <div class="container">
                 <div class="row">
+
+                  <!-- Article Image -->
+                  <div class="col-lg-6 align-self-center">
+                    <img class="img-fluid rounded" src="assets/img/machine.png" alt="mod">
+                  </div>
+                  <!-- End Article Image -->
                   <!-- Article Content -->
                   <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
                     <header class="mb-5">
@@ -205,44 +210,17 @@
                     </header>
                     <p class="h5">觉得一昧的工业Mod玩腻了？</p>
                     <p class="h5">那么你将会在这里得到全新的游戏体验！</p>
-                    <p class="h5">由纸箱社区玩家编写的原创多方块机械</p>
-                    <p class="h5">拥有自己完整的科技线，且无任何氪金内容</p>
+                    <p class="h5">由纸箱社区玩家编写的原创多方块机械。</p>
+                    <p class="h5">拥有自己完整的科技线，且无任何氪金内容。</p>
                     <p class="h5">社区内不定期举行创造者活动，你也可以成为其中的一员！</p>
                   </div>
                   <!-- End Article Content -->
-                  <!-- Article Image -->
-                  <div class="col-lg-6 align-self-center">
-                    <img class="img-fluid rounded" src="assets/img/machine.png" alt="mod">
-                  </div>
-                  <!-- End Article Image -->
-
                 </div>
               </div>
             </section>
             <!-- End Mod Product -->
 
-      <!-- Our Product -->
-      <section class="u-content-space">
-        <div class="container">
-          <div class="row">
-            <!-- Article Image -->
-            <div class="col-lg-6 align-self-center">
-              <img class="img-fluid rounded" src="assets/img/tp.png" alt="mod">
-            </div>
-            <!-- End Article Image -->
-            <!-- Article Content -->
-            <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
-              <header class="mb-5">
-                <h2 class="h1">人性化的菜单设计</h2>
-              </header>
-              <p class="h5">WASD是Minecraft中最常用的键，我们将菜单指令设置为/a，传送菜单设置为/d，打开菜单，仅需1秒。一触，即发。</p>
-              <p class="h5">我们还设置了可以打开菜单的快捷键，只要按下R键即可尽览所有内容</p>
-            </div>
-            <!-- End Article Content -->
-          </div>
-        </div>
-      </section>
-      <!-- End Our Product -->
+
 
       <!-- Our Product -->
       <section class="u-content-space">
@@ -254,7 +232,7 @@
                 <h2 class="h1">丰富的新手礼包</h2>
               </header>
               <p class="h5">科技前期十分艰难，就让新手礼包让你顺利度过前期吧~</p>
-              <p class="h5">赠送了AE的安全终端及身份卡，让熊孩子无计可施</p>
+              <p class="h5">赠送了AE的安全终端及身份卡，让熊孩子无计可施！</p>
             </div>
             <!-- End Article Content -->
             <!-- Article Image -->
@@ -282,7 +260,7 @@
                 <h2 class="h1">人性化的菜单设计</h2>
               </header>
               <p class="h5">WASD是Minecraft中最常用的键，我们将菜单指令设置为/a，传送菜单设置为/d，打开菜单，仅需1秒。一触，即发。</p>
-              <p class="h5">我们还设置了可以打开菜单的快捷键，只要按下R键即可尽览所有内容</p>
+              <p class="h5">我们还设置了可以打开菜单的快捷键，只要按下R键即可尽览所有内容。</p>
             </div>
             <!-- End Article Content -->
           </div>
@@ -294,11 +272,7 @@
       <section class="u-content-space">
         <div class="container">
           <div class="row">
-            <!-- Article Image -->
-            <div class="col-lg-6 align-self-center">
-              <img class="img-fluid rounded" src="assets/img/bungee.png" alt="mod">
-            </div>
-            <!-- End Article Image -->
+
             <!-- Article Content -->
             <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
               <header class="mb-5">
@@ -312,6 +286,11 @@
               <p class="h5">“服务器跟吃了德芙一样丝滑”</p>
             </div>
             <!-- End Article Content -->
+                        <!-- Article Image -->
+            <div class="col-lg-6 align-self-center">
+              <img class="img-fluid rounded" src="assets/img/bungee.png" alt="mod">
+            </div>
+            <!-- End Article Image -->
           </div>
         </div>
       </section>
@@ -320,6 +299,11 @@
             <section class="u-content-space">
               <div class="container">
                 <div class="row">
+                                      <!-- Article Image -->
+                  <div class="col-lg-6 align-self-center">
+                    <img class="img-fluid rounded" src="assets/img/player.png" alt="mod">
+                  </div>
+                  <!-- End Article Image -->
                   <!-- Article Content -->
                   <div class="col-lg-6 align-self-center mb-5 mb-lg-0 pr-lg-5">
                     <header class="mb-5">
@@ -329,11 +313,7 @@
                     <p class="h5">一般情况下，纸箱的在线人数稳定在25人以上，且我们承诺这其中不包含任何假人。</p>
                   </div>
                   <!-- End Article Content -->
-                  <!-- Article Image -->
-                  <div class="col-lg-6 align-self-center">
-                    <img class="img-fluid rounded" src="assets/img/player.png" alt="mod">
-                  </div>
-                  <!-- End Article Image -->
+
 
                 </div>
               </div>
