--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                     <h2 class="h1">纸箱中添加的模组</h2>
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
-                  <p class="h5">详细MOD表：应用能源2（附属:AE2 Stuff,封包合成,流体合成,懒人AE2）、模块化机械（附属:咕咕工具,模块化机械控制器）、工业时代2（附属:更多电力装置,高级太阳能,超级太阳能,重力装甲）、热力膨胀5（附属:红石兵工厂及其扩展）、龙之研究（附属:龙研扩展）、末影接口（附属:导管扩展、气体导管、无尽接口）、匠魂（附属:匠魂进化,匠魂扩充,匠魂护甲,匠魂工具等级,匠魂合金附加）、植物魔法（附属:额外植物学,植物魔法需要它！）、懒人厨房、通量网络、通用能源、核电工艺-重制版、通用机械及其发电、血魔法、凿子、工匠工作台、建筑之仗、无尽贪婪、樱、更多箱子、家具、潘马斯农场、傻瓜式农贸市场</p>
-                  <p class="h5">并且客户端已经预装了绝大部分玩家的常用辅助Mod，省去了玩家花费时间自己安装辅助Mod的时间</p>
-                  <p class="h5">MOD持续更新....</p>
+                  <p class="h5">详细MOD表：应用能源2（附属:AE2 Stuff,封包合成,流体合成,懒人AE2）、模块化机械（附属:咕咕工具,模块化机械控制器）、工业时代2（附属:更多电力装置,高级太阳能,超级太阳能,重力装甲）、热力膨胀5（附属:红石兵工厂及其扩展）、龙之研究（附属:龙研扩展）、末影接口（附属:导管扩展、气体导管、无尽接口）、匠魂（附属:匠魂进化,匠魂扩充,匠魂护甲,匠魂工具等级,匠魂合金附加）、植物魔法（附属:额外植物学,植物魔法需要它！）、懒人厨房、通量网络、通用能源、核电工艺-重制版、通用机械及其发电、血魔法、凿子、工匠工作台、建筑之仗、无尽贪婪、樱、更多箱子、家具、潘马斯农场、傻瓜式农贸市场。并且客户端已经预装了绝大部分玩家的常用辅助Mod，省去了玩家花费时间自己安装辅助Mod的时间，MOD持续更新....</p>
+
+
 
                 <!-- End Article Content -->
 
