--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <p class="h5">为了确保纸箱的可玩性，我们添加了许多的模组</p>
                   </header>
                   <p class="h5">详细MOD表：应用能源2（附属:AE2 Stuff,封包合成,流体合成,懒人AE2）、模块化机械（附属:咕咕工具,模块化机械控制器）、工业时代2（附属:更多电力装置,高级太阳能,超级太阳能,重力装甲）、热力膨胀5（附属:红石兵工厂及其扩展）、龙之研究（附属:龙研扩展）、末影接口（附属:导管扩展、气体导管、无尽接口）、匠魂（附属:匠魂进化,匠魂扩充,匠魂护甲,匠魂工具等级,匠魂合金附加）、植物魔法（附属:额外植物学,植物魔法需要它！）、懒人厨房、通量网络、通用能源、核电工艺-重制版、通用机械及其发电、血魔法、凿子、工匠工作台、建筑之仗、无尽贪婪、樱、更多箱子、家具、潘马斯农场、傻瓜式农贸市场。并且客户端已经预装了绝大部分玩家的常用辅助Mod，省去了玩家花费时间自己安装辅助Mod的时间，MOD持续更新....</p>
-
-
-
+                  <p class="h5">并且客户端已经预装了绝大部分玩家的常用辅助Mod，省去了玩家花费时间自己安装辅助Mod的时间</p>
+                  <p class="h5">MOD持续更新....</p>
+                
                 <!-- End Article Content -->
 
                 <!-- Article Image
@@ -281,7 +281,7 @@
               </header>
               <p class="h5">即使我们用了极强的硬件来运行服务器，但我们依然十分关注软件上的优化。</p>
               <p class="h5">纸箱使用了Waterfall群组服，完美解决游戏后期的绝大部分卡顿问题。</p>
-              <p class="h5">9大生存区，空岛，大陆，地皮应有尽有（背包数据同步）</p>
+              <p class="h5">9大生存区，大陆、空岛、地皮应有尽有（背包数据同步）</p>
               <p class="h5">并且服务器添加了性能分析Mod，玩家可以自己分析基地内绝大部分方块的流畅度</p>
               <p class="h5">“服务器跟吃了德芙一样丝滑”</p>
             </div>
@@ -310,7 +310,7 @@
                       <h2 class="h1">纸箱，一个喧闹繁华的服务器</h2>
                     </header>
                     <p class="h5">纸箱不同于大部分服务器那样冷清，我们通过高质量的游戏体验，引来了大量的玩家。</p>
-                    <p class="h5">一般情况下，纸箱的在线人数稳定在25人以上，且我们承诺这其中不包含任何假人。</p>
+                    <p class="h5">正常情况下，纸箱的在线人数稳定在25人以上，且我们承诺这其中不包含任何假人。</p>
                   </div>
                   <!-- End Article Content -->
 
