--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- Head -->
   <head>
     <title>纸箱工艺-1th 科技魔法Mod服务器</title>
-    <meta name="description" content="我的世界Minecraft科技魔法MOD生存服务器_1.12.2_在线人数稳定25人以上_在MCBBS人气爆棚_QQ群：279377943_2018-2021">
+    <meta name="description" content="我的世界Minecraft科技魔法MOD生存服务器_1.12.2_在线人数稳定25人以上_QQ群：279377943_2018-2022">
 
 
     <!-- Meta -->
@@ -78,10 +78,10 @@
                 <p class="text-uppercase u-letter-spacing-sm mb-0">Minecraft 1.12.2 高版本科技魔法群组服</p>
                 <h1 class="display-sm-4 display-lg-3 mb-3">我们<span class="js-display-typing"></span></h1>
                 <a class="btn btn-primary" href="https://jq.qq.com/?_wv=1027&k=2N0fop3D">
-                  加入纸箱官方QQ群 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+                  加入纸箱官方QQ群下载客户端[自动审核] <i class="fas fa-arrow-alt-circle-right ml-2"></i>
                 </a>
-                <a class="btn btn-primary" href="https://pan.baidu.com/s/10Un80e4SO6iiB96IXS-czg">
-                  下载纸箱客户端[提取码1234] <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+                <a class="btn btn-primary" href="https://github.com/PaperBoxMC">
+                  在GitHub上查看纸箱工艺部分项目 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
                 </a>
               </div>
             </div>
@@ -385,7 +385,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-20 text-center text-md-left mb-3 mb-md-0">
-            <small class="text-white">&copy; 2021 <a class="text-white" href="https://paperbox.jiajias.top/">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
+            <small class="text-white">&copy; 2022 <a class="text-white" href="https://paperbox.jiajias.top/">纸箱工艺服务器</a>. All Rights Reserved.Theme by Htmlstream.</small>
 
           </div>
 
